--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,6 @@ language: php
 before_script:
   - composer install
 php:
-  - '7.0'
   - '7.1'
+after_success:
+  - vendor/bin/php-coveralls --verbose
