--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
+        "php-coveralls/php-coveralls": "^2.1",
         "phpunit/phpunit": "~6.0",
         "symfony/thanks": "^1.0"
     },
