--- a/.env.testing
+++ b/.env.testing
@@ -10,7 +10,7 @@ DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_DATABASE=laravelprjtest
 DB_USERNAME=laravelprjtest
-DB_PASSWORD=xxxxxxxx
+DB_PASSWORD=laravelprjtest
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
